# google-auth

./: README.md  docker-compose.yml  pyproject.toml
config/: .env_template
docker/: Dockerfile
google_auth/: asgi.py  settings.py  urls.py  wsgi.py
